set about content into template instead of fetching the content api

--- a/app.html
+++ b/app.html
@@ -8,11 +8,13 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-MWS58RS');
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+
       <!-- End Google Tag Manager -->
     {{ HEAD }}
     <!-- Primary Meta Tags -->
     <title>Daniel Ordoñez</title>
-    <link rel="alternate" href="https://daniel-ordonez.com" hreflang="en-us" />
 
     <!-- Icon -->
     <link defer rel="apple-touch-icon" sizes="57x57" href="/icons/apple-touch-icon-57x57.png">
