add schema in jsonld to app template

--- a/app.html
+++ b/app.html
@@ -32,7 +32,19 @@
     <link rel="icon" type="image/png" href="/icons/android-icon-192x192.png" sizes="192x192">
     <meta hid="msapplication-TileColor" name="msapplication-TileColor" content="#ffffff">
     <meta hid="msapplication-TileImage" name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
-
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "  Person",
+        "name": "Daniel Adolfo Ordoñez Rubio",
+        "gender": "Male",
+        "givenName": "Daniel Adolfo",
+        "knowsLanguage": ["ES", "EN"]
+        "sameAs": [
+          "https://www.linkedin.com/in/daniel-adolfo-ordo%C3%B1ez-rubio/"
+        ]
+      }
+    </script>
   </head>
    <body {{ BODY_ATTRS }}>
     {{ APP }}
