fix shcema.org jsonld bad formatted

--- a/app.html
+++ b/app.html
@@ -35,11 +35,11 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "  Person",
+        "@type": "Person",
         "name": "Daniel Adolfo Ordoñez Rubio",
         "gender": "Male",
         "givenName": "Daniel Adolfo",
-        "knowsLanguage": ["ES", "EN"]
+        "knowsLanguage": ["ES", "EN"],
         "sameAs": [
           "https://www.linkedin.com/in/daniel-adolfo-ordo%C3%B1ez-rubio/"
         ]
