+minor ajustments +animate contact links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Vite + Svelte</title>
   </head>
   <body>
+
+<div id="bg"></div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
