--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </head>
   <body>
 
-<div id="bg"></div>
+    <div id="bg">
+      <div></div>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
