--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet" defer async>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte</title>
+    <title>dani-ordonez</title>
   </head>
   <body>
+    
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
