--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="styles.css"></noscript>
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"></noscript>
+    <link rel="canonical" href="https://daniordonez.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#d9d9d9"/>
+    <meta name="description" content="I'm Daniel Ordonez, a freelance graphic designer and software developer."/>
+    <meta name="robots" content="all"/>
     <title>dani-ordonez</title>
   </head>
   <body>
