+fix meta robots +umami analytics

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#d9d9d9"/>
     <meta name="description" content="I'm Daniel Ordonez, a freelance graphic designer and software developer."/>
-    <meta name="robots" content="all"/>
+    <meta name="robots" content="all, index, follow"/>
     <title>dani-ordonez</title>
   </head>
   <body>
     
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script async src="https://cloud.umami.is/script.js" data-website-id="cee1205f-0af7-4024-a5b9-a35a902e3d73"></script>
   </body>
 </html>
