--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <meta name="theme-color" content="#d9d9d9"/>
     <meta name="description" content="I'm Daniel Ordonez, a freelance graphic designer and software developer."/>
     <meta name="robots" content="all, index, follow"/>
+    <script async src="https://us.umami.is/script.js" data-website-id="cee1205f-0af7-4024-a5b9-a35a902e3d73"></script>
     <title>dani-ordonez</title>
   </head>
   <body>
     
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script async src="https://cloud.umami.is/script.js" data-website-id="cee1205f-0af7-4024-a5b9-a35a902e3d73"></script>
   </body>
 </html>
