--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel="canonical" href="https://daniordonez.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#d9d9d9"/>
-    <meta name="description" content="I'm Daniel Ordonez, a freelance graphic designer and software developer."/>
+    <meta name="description" content="I'm Daniel Ordonez, freelance graphic designer and software developer."/>
     <meta name="robots" content="all, index, follow"/>
-    <script async src="https://us.umami.is/script.js" data-website-id="cee1205f-0af7-4024-a5b9-a35a902e3d73"></script>
     <title>Dani Ordonez</title>
   </head>
   <body>
