netlify attribute to form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div id="app"></div>
     <dialog>
-      <form action="">
+      <form name="contact" method="POST" data-netlify="true">
       </form>
     </dialog>
     <script type="module" src="/src/main.js"></script>
