--- a/index.html
+++ b/index.html
@@ -15,9 +15,76 @@
     <meta name="robots" content="all, index, follow"/>
     <title>Dani Ordonez</title>
   </head>
-  <body>
+  <body class="noscroll">
+    <style>
+      :root {
+        font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+        line-height: 1.5;
+        font-weight: 400;
 
+        --rgb-color--dark: 250, 250, 250;
+        --rgb-color--light: 36, 36, 36;
+
+        --rgb-bg--light: 250, 250, 250;
+        --rgb-bg--dark: 8,8,8;
+
+        --c-color: rgba(var(--rgb-color--light), 1);
+        --c-bg: rgb(var(--rgb-bg--light));
+
+        color: var(--c-color);
+        background-color: var(--c-bg);
+
+
+        font-synthesis: none;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      @media (prefers-color-scheme: dark) {
+        :root {
+        --c-color: rgba(var(--rgb-color--dark), 0.8);
+        --c-bg: rgb(var(--rgb-bg--dark));
+        }
+      }
+
+      button, a {
+        color: inherit;
+        appearance: none;
+        text-decoration: none;
+        cursor: pointer;
+      }
+      #splash {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--c-bg);
+        pointer-events: none;
+      }
+      #splash.out {
+        animation: fade 900ms forwards;
+        animation-timing-function: cubic-bezier(0.33, 1, 0.68, 1);
+
+      }
+      @keyframes fade {
+        from {
+          opacity: 1;
+        } to {
+          opacity: 0;
+        }
+      }
+      body.noscroll {
+        overflow: hidden;
+      }
+    </style>
     <div id="app"></div>
+    <div id="splash">
+      daniordonez.com
+    </div>
     <dialog>
       <form name="contact" method="POST" data-netlify="true">
       </form>
