-remove japbg +rive animation to visibility

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         -moz-osx-font-smoothing: grayscale;
       }
       @media (prefers-color-scheme: dark) {
-        :root {
+        #splash {
         --c-color: rgba(var(--rgb-color--dark), 0.8);
         --c-bg: rgb(var(--rgb-bg--dark));
         }
