--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     </div>
 
     <form name="contact" data-netlify="true">
+      <input type="text" name="name">
+      <input type="email" name="email">
+      <textarea name="message"></textarea>
     </form>
     <script type="module" src="/src/main.js"></script>
   </body>
