display none to form

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       daniordonez.com
     </div>
 
-    <form name="contact" data-netlify="true">
+    <form name="contact" data-netlify="true" style="display: none;">
       <input type="text" name="name">
       <input type="email" name="email">
       <textarea name="message"></textarea>
