--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         align-items: center;
         background-color: var(--c-bg);
         pointer-events: none;
+        will-change: opacity;
       }
       #splash.out {
         animation: fade 900ms forwards;
@@ -81,17 +82,6 @@
       }
       body.noscroll {
         overflow: hidden;
-      }
-      #contact-dialog>.card{
-        --c-btn-color: white;
-      }
-      #contact-form h2{
-        margin: auto 0;
-      }
-      #contact-form  {
-        display: flex;
-        flex-direction: column;
-        row-gap: 1rem;
       }
     </style>
     <div id="app"></div>
