mail animation on form submit

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           opacity: 0;
         }
       }
-      body.noscroll {
+      .noscroll {
         overflow: hidden;
       }
     </style>
