fix minor bug on splash color in dark mode

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       }
       @media (prefers-color-scheme: dark) {
         #splash {
-        --c-color: rgba(var(--rgb-color--dark), 0.8);
+        --c-color: rgba(var(--rgb-color--dark), 1);
         --c-bg: rgb(var(--rgb-bg--dark));
         }
       }
@@ -70,6 +70,8 @@
         will-change: opacity;
       }
       #splash>svg {
+        color: var(--c-color);
+        fill: currentColor;
         height: 1.25rem;
         aspect-ratio: 57/9;
         width: auto;
